--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "graphql": "^14.1.1",
     "mongodb": "^3.1.13",
     "node-fetch": "^2.3.0"
+  },
+
+  "scripts": {
+    "start":"node Server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
+
 }
