--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
+
+"engines": {
+  "node": "10.x"
+},
+
 {
   "name": "hacker-news-api-graphql-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,9 +21,11 @@
     "node-fetch": "^2.3.0"
   },
 
-  "scripts": {
+
+"scripts": {
     "start":"node Server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  
 
 }
